--- a/thrift-u/package.json
+++ b/thrift-u/package.json
@@ -14,8 +14,7 @@
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-firebase-hooks": "^5.1.1",
-    "react-firebaseui": "^6.0.0"
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
