--- a/thrift-u/package.json
+++ b/thrift-u/package.json
@@ -12,6 +12,7 @@
     "firebase": "^12.3.0",
     "firebase-functions": "^6.4.0",
     "next": "15.5.3",
+    "next-firebase-auth-edge": "^1.11.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-firebase-hooks": "^5.1.1"
