--- a/thrift-u/package.json
+++ b/thrift-u/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@firebase/firestore": "^4.9.2",
     "firebase": "^12.3.0",
     "firebase-functions": "^6.4.0",
     "next": "15.5.3",
