--- a/thrift-u/package.json
+++ b/thrift-u/package.json
@@ -16,7 +16,8 @@
     "next-firebase-auth-edge": "^1.11.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "shadcn": "^3.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
