Created Jest configuration file

--- a/thrift-u/package.json
+++ b/thrift-u/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest"
   },
   "dependencies": {
     "@firebase/firestore": "^4.9.2",
