--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,11 +17,29 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.npm
+            thrift-u/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('thrift-u/package-lock.json') }}-${{ hashFiles('thrift-u/**/*.js', 'thrift-u/**/*.jsx', 'thrift-u/**/*.ts', 'thrift-u/**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('thrift-u/package-lock.json') }}-
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
-
+      - name: Debug environment variables
+        run: |
+          echo "environment variables:"
+          echo "FIREBASE_PROJECT_ID is set: $([[ -n "$FIREBASE_PROJECT_ID" ]] && echo 'yes' || echo 'no')"
+          echo "FIREBASE_CLIENT_EMAIL is set: $([[ -n "$FIREBASE_CLIENT_EMAIL" ]] && echo 'yes' || echo 'no')"
+          echo "FIREBASE_PRIVATE_KEY is set: $([[ -n "$FIREBASE_PRIVATE_KEY" ]] && echo 'yes' || echo 'no')"
+          echo "FIREBASE_PROJECT_ID length: ${#FIREBASE_PROJECT_ID}"
+        env:
+          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+          FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
+          FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
       # Build the Next.js app
       - name: Build Next.js app
         run: npm run build
@@ -83,15 +101,3 @@ jobs:
           name: playwright-report
           path: thrift-u/playwright-report/
           retention-days: 30
-
-      - uses: actions/cache@v4
-        with:
-          # See here for caching with `yarn`, `bun` or other package managers https://github.com/actions/cache/blob/main/examples.md or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
-          path: |
-            ~/.npm
-            ${{ github.workspace }}/.next/cache
-          # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
